refactor: modernize codebase, eliminate SonarQube vulnerabilities, and add RestAssured integration test suite
- pom.xml: updated dependencies, aligned plugins, and added rest-assured 6.0.1
- SonarQube: achieved 0 bugs, 0 vulnerabilities, 0 security hotspots
  - PasswordResetServiceImpl: S8700 time-zone-aware duration calculation
  - DatabaseSnapshotServiceImpl: S2077 validated identifier replication
  - HuggingFaceDatabaseFailoverServiceImpl: S5443 and S899 secure temp directory handling
- Tests: added RestAssuredApiTest covering auth, expenses, incomes, budgets, and savings goals
- Code style: wrapped long lines in RangeReportController and updated ignore rules